--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+@mixin d-flex($ai: center, $jc: center, $gap: 0) {
+    display: flex;
+    align-items: $ai;
+    justify-content: $jc;
+}
+
+@mixin div-sizing($width: 100%, $height: 100vh) {
+    width: $width;
+    height: $height;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+/*---- FONTS ----*/
+
+/* rubik-scribble-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Rubik Scribble';
+    font-style: normal;
+    font-weight: 400;
+    src: url('assets/fonts/rubik-scribble-v1-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
