--- a/src/app/game/profile-section/profile-section.component.html
+++ b/src/app/game/profile-section/profile-section.component.html
@@ -1,4 +1,4 @@
-<div>
+<div [ngClass]="{ 'activePlayer': playerIsActive }">
     <img src="assets/profile-picture.webp" alt="">
     <span>{{playerNameInput}}</span>
 </div>
