--- a/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/src/app/dialog-add-player/dialog-add-player.component.html
@@ -1,1 +1,12 @@
-<p>dialog-add-player works!</p>
+<h2 mat-dialog-title>Add a New Player</h2>
+<mat-dialog-content>
+  <p>What's the name of the player?</p>
+  <mat-form-field  class="centrify">
+    <mat-label>Players name</mat-label>
+    <input matInput [(ngModel)]="name">
+  </mat-form-field>
+</mat-dialog-content>
+<mat-dialog-actions class="centrify">
+  <button mat-button [mat-dialog-close]="name" cdkFocusInitial>Add Player</button>
+</mat-dialog-actions>
+    
