--- a/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/src/app/dialog-add-player/dialog-add-player.component.html
@@ -1,12 +1,17 @@
 <h2 mat-dialog-title>Add a New Player</h2>
+
 <mat-dialog-content>
+
   <p>What's the name of the player?</p>
+
   <mat-form-field  class="centrify">
     <mat-label>Players name</mat-label>
     <input matInput [(ngModel)]="name">
   </mat-form-field>
+
 </mat-dialog-content>
+
 <mat-dialog-actions class="centrify">
-  <button mat-button [mat-dialog-close]="name" cdkFocusInitial>Add Player</button>
+  <button mat-button [disabled]="name.length == 0" [mat-dialog-close]="name" cdkFocusInitial>Add Player</button>
 </mat-dialog-actions>
     
