--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,7 +1,4 @@
 <mat-card>
-    <mat-card-header style="font-size: 24px; font-weight: bold; padding-bottom: 12px;">Kartenregel-Titel</mat-card-header>
-    <mat-card-content style="font-size: 16px;">Karten regel beschreibung Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-        Repellat illum, voluptate reiciendis similique in maxime placeat, 
-        cumque recusandae atque, ea incidunt nobis sint consequatur molestiae soluta 
-        quibusdam aspernatur error minima?</mat-card-content>
+    <mat-card-header style="font-size: 24px; font-weight: bold; padding-bottom: 12px;"> {{ cardTitle }} </mat-card-header>
+    <mat-card-content style="font-size: 16px;"> {{ cardDescription }} </mat-card-content>
 </mat-card>
